style: fix icon alignment

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -82,3 +82,8 @@ abbr {
     padding: 0;
   }
 }
+
+.icon {
+  display: inline-block;
+  vertical-align: middle;
+}
